infra/resources/todo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  replicas: 3
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: localhost:5000/todo:latest
