infra/resources/todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  labels:
    app: todo
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    name: http
    targetPort: 8080
  selector:
    app: todo
