infra/resources/todo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-vsvc
spec:
  hosts:
  - 'todo'
  gateways:
  - istio-system/todo-ingressgateway
  http:
  - route:
    - match:
      - uri:
          prefix: "/todo"
      destination:
        port:
          number: 8080
        host: todo
#      corsPolicy:
#        allowOrigin:
#        - "*",.
#        allowMethods:
#        - POST
#        - GET
#        - OPTIONS
#        - PUT
#        - DELETE
#        - PATCH
#        allowHeaders:
#        - "authorization"
#        - "dnt"
#        - "user-agent"
#        - "x-requested-with"
#        - "if-modified-since"
#        - "cache-control"
#        - "content-type"
#        - "range"
#        - "x-xsrf-token"
#        exposeHeaders:
#        - "content-length"
#        - "content-range"
#        maxAge: "86400s"
